Fixed spacing between about text and header

--- a/frontend/src/css/style.css
+++ b/frontend/src/css/style.css
@@ -61,6 +61,7 @@ hr.horiz {
 .btn-information{
   clear:both;
   float:right;
+  margin-bottom: 20px;
 }
 .btn-change {
   font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI",
@@ -120,15 +121,17 @@ body {
   margin-right: 2%;
 }
 .row {
-  display: flex !important;
+  display: block !important;
   justify-content: space-around !important;
-  margin-top: 50px !important;
   margin-bottom: 25px !important;
-  text-align: left !important;
+  text-align: center !important;
 }
 #mainNav .navbar-nav .nav-item .nav-link {
   font-size: 100%;
 }
 #mainNav .navbar-brand {
   font-size: 1.94em;
+}
+.no-margin {
+  margin: 0 !important;
 }
